[gd_scene load_steps=12 format=2]

[ext_resource path="res://player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/world.gd" type="Script" id=2]
[ext_resource path="res://enemy/enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://map/map.tres" type="TileSet" id=4]
[ext_resource path="res://assets/font/GloriaHallelujah-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/Heart_Bar.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/portal.tscn" type="PackedScene" id=7]
[ext_resource path="res://menu/popup_dead.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/TambahPeluru.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="world" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.454902, 0.145098, 0.145098, 1 )
margin_left = -2385.0
margin_top = -807.0
margin_right = 3823.0
margin_bottom = 2634.0
color = Color( 0.215686, 0.00784314, 0.00784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 39, 39 )
format = 1
tile_data = PoolIntArray( -983090, 0, 0, -983089, 0, 0, -983088, 0, 0, -983087, 0, 0, -983086, 0, 0, -983085, 0, 0, -983084, 0, 0, -983083, 0, 0, -983082, 0, 0, -983081, 0, 0, -983080, 0, 0, -983079, 0, 0, -983078, 0, 0, -983077, 0, 0, -983076, 0, 0, -983075, 0, 0, -983074, 0, 0, -983073, 0, 0, -917554, 0, 0, -917537, 0, 0, -852018, 0, 0, -852001, 0, 0, -786482, 0, 0, -786465, 0, 0, -720946, 0, 0, -720929, 0, 0, -655410, 0, 0, -655393, 0, 0, -589874, 0, 0, -589857, 0, 0, -524338, 0, 0, -524321, 0, 0, -589777, 0, 0, -589776, 0, 0, -589775, 0, 0, -589774, 0, 0, -589773, 0, 0, -589772, 0, 0, -589771, 0, 0, -589770, 0, 0, -589769, 0, 0, -589768, 0, 0, -589767, 0, 0, -589766, 0, 0, -458802, 0, 0, -458785, 0, 0, -524241, 0, 0, -524230, 0, 0, -393266, 0, 0, -393249, 0, 0, -458705, 0, 0, -458694, 0, 0, -327730, 0, 0, -327713, 0, 0, -393169, 0, 0, -393158, 0, 0, -262194, 0, 0, -262177, 0, 0, -262176, 0, 0, -262175, 0, 0, -262174, 0, 0, -262173, 0, 0, -262172, 0, 0, -262171, 0, 0, -262170, 0, 0, -262169, 0, 0, -262168, 0, 0, -262167, 0, 0, -262166, 0, 0, -262165, 0, 0, -262164, 0, 0, -262163, 0, 0, -262162, 0, 0, -262161, 0, 0, -262160, 0, 0, -262159, 0, 0, -262158, 0, 0, -262157, 0, 0, -262156, 0, 0, -262155, 0, 0, -262154, 0, 0, -262153, 0, 0, -262152, 0, 0, -262151, 0, 0, -262150, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -327665, 0, 0, -327664, 0, 0, -327663, 0, 0, -327662, 0, 0, -327661, 0, 0, -327660, 0, 0, -327659, 0, 0, -327658, 0, 0, -327657, 0, 0, -327656, 0, 0, -327655, 0, 0, -327654, 0, 0, -327653, 0, 0, -327652, 0, 0, -327651, 0, 0, -327633, 0, 0, -327622, 0, 0, -196658, 0, 0, -196641, 0, 0, -262115, 0, 0, -262097, 0, 0, -262086, 0, 0, -131122, 0, 0, -131116, 0, 0, -131115, 0, 0, -131114, 0, 0, -131113, 0, 0, -131112, 0, 0, -131111, 0, 0, -131105, 0, 0, -196579, 0, 0, -196561, 0, 0, -196550, 0, 0, -196549, 0, 0, -196548, 0, 0, -196547, 0, 0, -196546, 0, 0, -196545, 0, 0, -196544, 0, 0, -196543, 0, 0, -196542, 0, 0, -196541, 0, 0, -196540, 0, 0, -196539, 0, 0, -196538, 0, 0, -196537, 0, 0, -196536, 0, 0, -196535, 0, 0, -196534, 0, 0, -196533, 0, 0, -196532, 0, 0, -196531, 0, 0, -196530, 0, 0, -196529, 0, 0, -196528, 0, 0, -196527, 0, 0, -196526, 0, 0, -196525, 0, 0, -196524, 0, 0, -65586, 0, 0, -65575, 0, 0, -65569, 0, 0, -131043, 0, 0, -131025, 0, 0, -131014, 0, 0, -130988, 0, 0, -50, 0, 0, -39, 0, 0, -33, 0, 0, -65507, 0, 0, -65489, 0, 0, -65478, 0, 0, -65452, 0, 0, 65486, 0, 0, 65497, 0, 0, 65503, 0, 0, 29, 0, 0, 47, 0, 0, 58, 0, 0, 84, 0, 0, 131022, 0, 0, 131033, 0, 0, 131039, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65565, 0, 0, 65583, 0, 0, 65594, 0, 0, 65620, 0, 0, 196558, 0, 0, 196569, 0, 0, 196575, 0, 0, 131095, 0, 0, 131101, 0, 0, 131119, 0, 0, 131130, 0, 0, 131156, 0, 0, 262094, 0, 0, 262105, 0, 0, 262111, 0, 0, 196631, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 196647, 0, 0, 196648, 0, 0, 196649, 0, 0, 196650, 0, 0, 196651, 0, 0, 196652, 0, 0, 196653, 0, 0, 196654, 0, 0, 196655, 0, 0, 196692, 0, 0, 327630, 0, 0, 327641, 0, 0, 327647, 0, 0, 262167, 0, 0, 262228, 0, 0, 393166, 0, 0, 393177, 0, 0, 393183, 0, 0, 327703, 0, 0, 327764, 0, 0, 458702, 0, 0, 458713, 0, 0, 458719, 0, 0, 458745, 0, 0, 393239, 0, 0, 393300, 0, 0, 524238, 0, 0, 524249, 0, 0, 524255, 0, 0, 524281, 0, 0, 458775, 0, 0, 458819, 0, 0, 458820, 0, 0, 458821, 0, 0, 458822, 0, 0, 458823, 0, 0, 458824, 0, 0, 458825, 0, 0, 458826, 0, 0, 458827, 0, 0, 458828, 0, 0, 458836, 0, 0, 589774, 0, 0, 589785, 0, 0, 589791, 0, 0, 589817, 0, 0, 524311, 0, 0, 524364, 0, 0, 524372, 0, 0, 655310, 0, 0, 655327, 0, 0, 655353, 0, 0, 589900, 0, 0, 589908, 0, 0, 720846, 0, 0, 720889, 0, 0, 655372, 0, 0, 655398, 0, 0, 655399, 0, 0, 655400, 0, 0, 655401, 0, 0, 655402, 0, 0, 655403, 0, 0, 655404, 0, 0, 655405, 0, 0, 655406, 0, 0, 655407, 0, 0, 655408, 0, 0, 655409, 0, 0, 655410, 0, 0, 655411, 0, 0, 655412, 0, 0, 655436, 0, 0, 655444, 0, 0, 786382, 0, 0, 786425, 0, 0, 720908, 0, 0, 720972, 0, 0, 720980, 0, 0, 851918, 0, 0, 851961, 0, 0, 786444, 0, 0, 786508, 0, 0, 786516, 0, 0, 917454, 0, 0, 917497, 0, 0, 851980, 0, 0, 852026, 0, 0, 852044, 0, 0, 852052, 0, 0, 982990, 0, 0, 983033, 0, 0, 917516, 0, 0, 917562, 0, 0, 917580, 0, 0, 917588, 0, 0, 1048526, 0, 0, 1048569, 0, 0, 983052, 0, 0, 983098, 0, 0, 983116, 0, 0, 983124, 0, 0, 1114062, 0, 0, 1114105, 0, 0, 1048588, 0, 0, 1048634, 0, 0, 1048660, 0, 0, 1179598, 0, 0, 1179641, 0, 0, 1179647, 0, 0, 1114124, 0, 0, 1114170, 0, 0, 1114196, 0, 0, 1245134, 0, 0, 1245146, 0, 0, 1245147, 0, 0, 1245148, 0, 0, 1245149, 0, 0, 1245150, 0, 0, 1245151, 0, 0, 1245152, 0, 0, 1245153, 0, 0, 1245154, 0, 0, 1245155, 0, 0, 1245156, 0, 0, 1245157, 0, 0, 1245158, 0, 0, 1245159, 0, 0, 1245160, 0, 0, 1245161, 0, 0, 1245162, 0, 0, 1245163, 0, 0, 1245164, 0, 0, 1245177, 0, 0, 1245183, 0, 0, 1179660, 0, 0, 1179689, 0, 0, 1179706, 0, 0, 1179732, 0, 0, 1310670, 0, 0, 1310713, 0, 0, 1310719, 0, 0, 1245196, 0, 0, 1245225, 0, 0, 1245242, 0, 0, 1245268, 0, 0, 1376206, 0, 0, 1376255, 0, 0, 1310732, 0, 0, 1310761, 0, 0, 1310767, 0, 0, 1310768, 0, 0, 1310769, 0, 0, 1310770, 0, 0, 1310771, 0, 0, 1310772, 0, 0, 1310773, 0, 0, 1310778, 0, 0, 1310804, 0, 0, 1441742, 0, 0, 1441791, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376297, 0, 0, 1376309, 0, 0, 1376314, 0, 0, 1376315, 0, 0, 1376316, 0, 0, 1376317, 0, 0, 1376318, 0, 0, 1376319, 0, 0, 1376320, 0, 0, 1376321, 0, 0, 1376322, 0, 0, 1376323, 0, 0, 1376324, 0, 0, 1376325, 0, 0, 1376326, 0, 0, 1376327, 0, 0, 1376328, 0, 0, 1376329, 0, 0, 1376330, 0, 0, 1376331, 0, 0, 1376332, 0, 0, 1376333, 0, 0, 1376334, 0, 0, 1376335, 0, 0, 1376336, 0, 0, 1376337, 0, 0, 1376338, 0, 0, 1376339, 0, 0, 1376340, 0, 0, 1507278, 0, 0, 1507327, 0, 0, 1441833, 0, 0, 1441845, 0, 0, 1441876, 0, 0, 1572814, 0, 0, 1572863, 0, 0, 1507369, 0, 0, 1507381, 0, 0, 1507412, 0, 0, 1638350, 0, 0, 1638386, 0, 0, 1638387, 0, 0, 1638388, 0, 0, 1638389, 0, 0, 1638390, 0, 0, 1638391, 0, 0, 1638392, 0, 0, 1638393, 0, 0, 1638394, 0, 0, 1638395, 0, 0, 1638396, 0, 0, 1638397, 0, 0, 1638398, 0, 0, 1638399, 0, 0, 1572905, 0, 0, 1572917, 0, 0, 1572948, 0, 0, 1703886, 0, 0, 1638441, 0, 0, 1638453, 0, 0, 1638458, 0, 0, 1638484, 0, 0, 1769422, 0, 0, 1703977, 0, 0, 1703989, 0, 0, 1703994, 0, 0, 1704020, 0, 0, 1834958, 0, 0, 1769513, 0, 0, 1769525, 0, 0, 1769530, 0, 0, 1769556, 0, 0, 1900494, 0, 0, 1835049, 0, 0, 1835061, 0, 0, 1835066, 0, 0, 1835092, 0, 0, 1966030, 0, 0, 1966055, 0, 0, 1966056, 0, 0, 1966057, 0, 0, 1966058, 0, 0, 1966059, 0, 0, 1966060, 0, 0, 1966061, 0, 0, 1966062, 0, 0, 1966063, 0, 0, 1966064, 0, 0, 1966065, 0, 0, 1966066, 0, 0, 1966067, 0, 0, 1966068, 0, 0, 1966069, 0, 0, 1966070, 0, 0, 1966071, 0, 0, 1966072, 0, 0, 1966073, 0, 0, 1966074, 0, 0, 1966075, 0, 0, 1966076, 0, 0, 1966077, 0, 0, 1900585, 0, 0, 1900597, 0, 0, 1900628, 0, 0, 2031566, 0, 0, 2031591, 0, 0, 1966121, 0, 0, 1966133, 0, 0, 1966164, 0, 0, 2097102, 0, 0, 2097127, 0, 0, 2031633, 0, 0, 2031634, 0, 0, 2031635, 0, 0, 2031636, 0, 0, 2031637, 0, 0, 2031638, 0, 0, 2031639, 0, 0, 2031640, 0, 0, 2031641, 0, 0, 2031642, 0, 0, 2031643, 0, 0, 2031644, 0, 0, 2031645, 0, 0, 2031646, 0, 0, 2031647, 0, 0, 2031648, 0, 0, 2031649, 0, 0, 2031650, 0, 0, 2031651, 0, 0, 2031652, 0, 0, 2031653, 0, 0, 2031654, 0, 0, 2031655, 0, 0, 2031656, 0, 0, 2031657, 0, 0, 2031669, 0, 0, 2031676, 0, 0, 2031677, 0, 0, 2031678, 0, 0, 2031679, 0, 0, 2031680, 0, 0, 2031681, 0, 0, 2031682, 0, 0, 2031683, 0, 0, 2031684, 0, 0, 2031685, 0, 0, 2031686, 0, 0, 2031687, 0, 0, 2031688, 0, 0, 2031689, 0, 0, 2031690, 0, 0, 2031691, 0, 0, 2031692, 0, 0, 2031693, 0, 0, 2031694, 0, 0, 2031695, 0, 0, 2031696, 0, 0, 2031697, 0, 0, 2031698, 0, 0, 2031699, 0, 0, 2031700, 0, 0, 2162638, 0, 0, 2162654, 0, 0, 2162663, 0, 0, 2097236, 0, 0, 2228174, 0, 0, 2228190, 0, 0, 2228199, 0, 0, 2162772, 0, 0, 2293710, 0, 0, 2293726, 0, 0, 2293735, 0, 0, 2228308, 0, 0, 2359246, 0, 0, 2359262, 0, 0, 2359271, 0, 0, 2293827, 0, 0, 2293844, 0, 0, 2424782, 0, 0, 2424798, 0, 0, 2424807, 0, 0, 2359363, 0, 0, 2359380, 0, 0, 2490318, 0, 0, 2490334, 0, 0, 2490343, 0, 0, 2424899, 0, 0, 2424916, 0, 0, 2555854, 0, 0, 2555870, 0, 0, 2490435, 0, 0, 2490452, 0, 0, 2621390, 0, 0, 2621406, 0, 0, 2555916, 0, 0, 2555917, 0, 0, 2555918, 0, 0, 2555919, 0, 0, 2555920, 0, 0, 2555921, 0, 0, 2555922, 0, 0, 2555923, 0, 0, 2555924, 0, 0, 2555925, 0, 0, 2555926, 0, 0, 2555927, 0, 0, 2555928, 0, 0, 2555929, 0, 0, 2555930, 0, 0, 2555931, 0, 0, 2555932, 0, 0, 2555933, 0, 0, 2555957, 0, 0, 2555958, 0, 0, 2555959, 0, 0, 2555960, 0, 0, 2555961, 0, 0, 2555962, 0, 0, 2555963, 0, 0, 2555964, 0, 0, 2555965, 0, 0, 2555966, 0, 0, 2555967, 0, 0, 2555968, 0, 0, 2555969, 0, 0, 2555970, 0, 0, 2555971, 0, 0, 2555988, 0, 0, 2686926, 0, 0, 2686942, 0, 0, 2621452, 0, 0, 2621524, 0, 0, 2752462, 0, 0, 2752478, 0, 0, 2686988, 0, 0, 2687060, 0, 0, 2817998, 0, 0, 2818014, 0, 0, 2752524, 0, 0, 2752585, 0, 0, 2752596, 0, 0, 2883534, 0, 0, 2883550, 0, 0, 2883551, 0, 0, 2883552, 0, 0, 2883553, 0, 0, 2883554, 0, 0, 2883555, 0, 0, 2883556, 0, 0, 2883557, 0, 0, 2883558, 0, 0, 2883559, 0, 0, 2883560, 0, 0, 2883561, 0, 0, 2883562, 0, 0, 2883563, 0, 0, 2883564, 0, 0, 2883565, 0, 0, 2883566, 0, 0, 2883567, 0, 0, 2883568, 0, 0, 2883569, 0, 0, 2883570, 0, 0, 2883571, 0, 0, 2883572, 0, 0, 2883573, 0, 0, 2883574, 0, 0, 2883575, 0, 0, 2883576, 0, 0, 2883577, 0, 0, 2883578, 0, 0, 2883579, 0, 0, 2883580, 0, 0, 2883581, 0, 0, 2818060, 0, 0, 2818121, 0, 0, 2818132, 0, 0, 2949070, 0, 0, 2949086, 0, 0, 2883596, 0, 0, 2883607, 0, 0, 2883608, 0, 0, 2883609, 0, 0, 2883610, 0, 0, 2883611, 0, 0, 2883612, 0, 0, 2883613, 0, 0, 2883614, 0, 0, 2883615, 0, 0, 2883616, 0, 0, 2883617, 0, 0, 2883618, 0, 0, 2883619, 0, 0, 2883620, 0, 0, 2883621, 0, 0, 2883622, 0, 0, 2883623, 0, 0, 2883624, 0, 0, 2883625, 0, 0, 2883626, 0, 0, 2883627, 0, 0, 2883628, 0, 0, 2883629, 0, 0, 2883630, 0, 0, 2883631, 0, 0, 2883632, 0, 0, 2883633, 0, 0, 2883634, 0, 0, 2883635, 0, 0, 2883636, 0, 0, 2883637, 0, 0, 2883638, 0, 0, 2883639, 0, 0, 2883640, 0, 0, 2883641, 0, 0, 2883642, 0, 0, 2883643, 0, 0, 2883657, 0, 0, 2883668, 0, 0, 3014606, 0, 0, 3014622, 0, 0, 2949132, 0, 0, 2949179, 0, 0, 2949193, 0, 0, 2949204, 0, 0, 3080142, 0, 0, 3080158, 0, 0, 3014668, 0, 0, 3014715, 0, 0, 3014729, 0, 0, 3014740, 0, 0, 3145678, 0, 0, 3145694, 0, 0, 3080251, 0, 0, 3080265, 0, 0, 3080276, 0, 0, 3211214, 0, 0, 3211230, 0, 0, 3211256, 0, 0, 3145787, 0, 0, 3145801, 0, 0, 3145812, 0, 0, 3276750, 0, 0, 3276766, 0, 0, 3276792, 0, 0, 3211323, 0, 0, 3211337, 0, 0, 3211348, 0, 0, 3342286, 0, 0, 3342302, 0, 0, 3342328, 0, 0, 3276859, 0, 0, 3276873, 0, 0, 3276884, 0, 0, 3407822, 0, 0, 3407838, 0, 0, 3407864, 0, 0, 3342395, 0, 0, 3342409, 0, 0, 3342420, 0, 0, 3473358, 0, 0, 3473374, 0, 0, 3473400, 0, 0, 3407931, 0, 0, 3407945, 0, 0, 3407956, 0, 0, 3538894, 0, 0, 3538910, 0, 0, 3538936, 0, 0, 3473467, 0, 0, 3473481, 0, 0, 3473492, 0, 0, 3604430, 0, 0, 3604446, 0, 0, 3604472, 0, 0, 3539017, 0, 0, 3539028, 0, 0, 3669966, 0, 0, 3669982, 0, 0, 3670008, 0, 0, 3604553, 0, 0, 3604564, 0, 0, 3735502, 0, 0, 3735518, 0, 0, 3670089, 0, 0, 3670100, 0, 0, 3801038, 0, 0, 3801054, 0, 0, 3735625, 0, 0, 3735636, 0, 0, 3866574, 0, 0, 3866575, 0, 0, 3866576, 0, 0, 3866577, 0, 0, 3866578, 0, 0, 3866579, 0, 0, 3866580, 0, 0, 3866581, 0, 0, 3866582, 0, 0, 3866583, 0, 0, 3866584, 0, 0, 3866585, 0, 0, 3866586, 0, 0, 3866587, 0, 0, 3866588, 0, 0, 3866589, 0, 0, 3866590, 0, 0, 3866591, 0, 0, 3866592, 0, 0, 3866593, 0, 0, 3866594, 0, 0, 3866595, 0, 0, 3866596, 0, 0, 3866597, 0, 0, 3866598, 0, 0, 3866599, 0, 0, 3866600, 0, 0, 3866601, 0, 0, 3866602, 0, 0, 3866603, 0, 0, 3866604, 0, 0, 3866605, 0, 0, 3866606, 0, 0, 3866607, 0, 0, 3866608, 0, 0, 3866609, 0, 0, 3866610, 0, 0, 3866611, 0, 0, 3866612, 0, 0, 3866613, 0, 0, 3866614, 0, 0, 3866615, 0, 0, 3866616, 0, 0, 3866617, 0, 0, 3866618, 0, 0, 3866619, 0, 0, 3866620, 0, 0, 3866621, 0, 0, 3866622, 0, 0, 3866623, 0, 0, 3801088, 0, 0, 3801089, 0, 0, 3801090, 0, 0, 3801091, 0, 0, 3801092, 0, 0, 3801093, 0, 0, 3801094, 0, 0, 3801095, 0, 0, 3801096, 0, 0, 3801097, 0, 0, 3801098, 0, 0, 3801099, 0, 0, 3801100, 0, 0, 3801101, 0, 0, 3801102, 0, 0, 3801103, 0, 0, 3801104, 0, 0, 3801105, 0, 0, 3801106, 0, 0, 3801107, 0, 0, 3801108, 0, 0, 3801109, 0, 0, 3801110, 0, 0, 3801111, 0, 0, 3801112, 0, 0, 3801113, 0, 0, 3801114, 0, 0, 3801115, 0, 0, 3801116, 0, 0, 3801117, 0, 0, 3801118, 0, 0, 3801119, 0, 0, 3801120, 0, 0, 3801121, 0, 0, 3801122, 0, 0, 3801123, 0, 0, 3801124, 0, 0, 3801125, 0, 0, 3801126, 0, 0, 3801127, 0, 0, 3801128, 0, 0, 3801129, 0, 0, 3801130, 0, 0, 3801131, 0, 0, 3801132, 0, 0, 3801133, 0, 0, 3801134, 0, 0, 3801135, 0, 0, 3801136, 0, 0, 3801137, 0, 0, 3801138, 0, 0, 3801139, 0, 0, 3801140, 0, 0, 3801141, 0, 0, 3801142, 0, 0, 3801143, 0, 0, 3801144, 0, 0, 3801145, 0, 0, 3801146, 0, 0, 3801147, 0, 0, 3801148, 0, 0, 3801149, 0, 0, 3801150, 0, 0, 3801151, 0, 0, 3801152, 0, 0, 3801153, 0, 0, 3801154, 0, 0, 3801155, 0, 0, 3801156, 0, 0, 3801157, 0, 0, 3801158, 0, 0, 3801159, 0, 0, 3801160, 0, 0, 3801161, 0, 0, 3801162, 0, 0, 3801163, 0, 0, 3801164, 0, 0, 3801165, 0, 0, 3801166, 0, 0, 3801167, 0, 0, 3801168, 0, 0, 3801169, 0, 0, 3801170, 0, 0, 3801171, 0, 0, 3801172, 0, 0 )

[node name="portal" parent="." instance=ExtResource( 7 )]
position = Vector2( 3186.39, 1075.8 )

[node name="TambahPeluru" parent="." instance=ExtResource( 9 )]
position = Vector2( 2069.8, -220.009 )

[node name="TambahPeluru2" parent="." instance=ExtResource( 9 )]
position = Vector2( 2183.34, 1867.83 )

[node name="TambahPeluru3" parent="." instance=ExtResource( 9 )]
position = Vector2( -1478.64, 1929.57 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 575.763, 213 )
speed = 5

[node name="enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 202.263, 293.852 )

[node name="enemy2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1069.32, 170.625 )

[node name="enemy3" parent="." instance=ExtResource( 3 )]
position = Vector2( 918.644, 543.725 )

[node name="spawn_musuh" type="Timer" parent="."]
wait_time = 10.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="popup_dead" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false

[node name="Heart_Bar" parent="CanvasLayer" instance=ExtResource( 6 )]
margin_left = 33.0
margin_top = 27.0
margin_right = 73.0
margin_bottom = 67.0

[node name="bullet" type="Label" parent="CanvasLayer"]
margin_left = 226.0
margin_top = 17.0
margin_right = 330.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "Bullet: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/fade = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="isi_peluru" from="TambahPeluru" to="player" method="_on_TambahPeluru_isi_peluru"]
[connection signal="isi_peluru" from="TambahPeluru" to="." method="_on_TambahPeluru_isi_peluru"]
[connection signal="isi_peluru" from="TambahPeluru2" to="player" method="_on_TambahPeluru_isi_peluru"]
[connection signal="isi_peluru" from="TambahPeluru2" to="." method="_on_TambahPeluru_isi_peluru"]
[connection signal="isi_peluru" from="TambahPeluru3" to="player" method="_on_TambahPeluru_isi_peluru"]
[connection signal="isi_peluru" from="TambahPeluru3" to="." method="_on_TambahPeluru_isi_peluru"]
[connection signal="mati" from="player" to="CanvasLayer/Heart_Bar" method="_on_player_mati"]
[connection signal="nembak" from="player" to="." method="_on_player_nembak"]
[connection signal="timeout" from="spawn_musuh" to="." method="_on_spawn_musuh_timeout"]
[connection signal="main_menu" from="CanvasLayer/popup_dead" to="." method="main_menu"]
[connection signal="retry" from="CanvasLayer/popup_dead" to="." method="retry"]
[connection signal="dead" from="CanvasLayer/Heart_Bar" to="." method="dead"]
[connection signal="kurang" from="CanvasLayer/Heart_Bar" to="enemy" method="_on_Heart_Bar_kurang"]
[connection signal="animation_finished" from="CanvasLayer/AnimationPlayer" to="." method="animation_finished"]
